--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>project</finalName>
 	</build>
 
 </project>
