--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -13,5 +13,7 @@ spring.h2.console.enabled=true
 
 spring.jpa.show-sql=true
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.client.instance.preferIpAddress=true
+#eureka.client.service-url.defaultZone=http://localhost:8762/eureka
+#eureka.client.instance.preferIpAddress=true
+
+spring.cloud.config.uri=http://localhost:8888
