--- a/project/src/main/resources/application-dev.properties
+++ b/project/src/main/resources/application-dev.properties
@@ -3,15 +3,15 @@ server.port=8082
 gate.security.secret=TopSecret
 gate.security.timeout=3000000
 #
-##H2 Database Configurations
-spring.datasource.url=jdbc:h2:mem:resoma-project
-spring.datasource.driverClassName=org.h2.Driver
+##Database Configurations
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.show-sql=false
+spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/project
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=admin
 spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+spring.datasource.initialization-mode=always
 
-spring.jpa.show-sql=true
-
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://service-registry-server:8761/eureka
 eureka.client.instance.preferIpAddress=true
