progress on adding config client

--- a/project/src/main/resources/application-dev.properties
+++ b/project/src/main/resources/application-dev.properties
@@ -13,5 +13,6 @@ spring.datasource.username=admin
 spring.datasource.password=password
 spring.datasource.initialization-mode=always
 
+##Eureka Configurations
 eureka.client.service-url.defaultZone=http://service-registry-server:8761/eureka
 eureka.client.instance.preferIpAddress=true
