Integrate People api

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,8 +10,11 @@ spring.datasource.username=admin
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
-
 spring.jpa.show-sql=true
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.instance.preferIpAddress=true
+
+
+##Module server communication properties
+server.people.domain=http://localhost:8083
