--- a/project/src/main/resources/application-local.properties
+++ b/project/src/main/resources/application-local.properties
@@ -12,5 +12,5 @@ spring.h2.console.enabled=true
 spring.liquibase.enabled=false
 
 ##Eureka Configurations
-eureka.client.service-url.defaultZone=http://service-registry-server:8761/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.instance.preferIpAddress=true
