Added profile dev for bitbucket mvn clean install commands
Added dev profile with posgres dependency

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,11 +7,11 @@ pipelines:
     - step:
         name: Clean
         script:
-          - mvn -B clean # -B batch mode makes Maven less verbose
+          - mvn -B clean -P dev # -B batch mode makes Maven less verbose
     - step:
         name: Package
         script:
-          - mvn -B install # -B batch mode makes Maven less verbose
+          - mvn -B install -P dev # -B batch mode makes Maven less verbose
           - ls -R
         artifacts:
           - project/target/**
