--- a/project/src/main/resources/application-config-server-local.properties
+++ b/project/src/main/resources/application-config-server-local.properties
@@ -1,3 +1,3 @@
-server.port=8082
+server.port=${PORT:0}
 spring.cloud.config.uri=http://localhost:8888
 management.endpoints.web.exposure.include=health, info, refresh
