--- a/project/src/main/resources/application-dev.properties
+++ b/project/src/main/resources/application-dev.properties
@@ -1,7 +1,8 @@
-server.port=8082
+server.port=${PORT:0}
 #
 gate.security.secret=TopSecret
 gate.security.timeout=3000000
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 #
 ##Database Configurations
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
@@ -14,6 +15,7 @@ spring.datasource.password=password
 spring.datasource.initialization-mode=always
 
 ##Liquibase Configurations
+spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
 
 ##Eureka Configurations
