--- a/project/pom.xml
+++ b/project/pom.xml
@@ -30,14 +30,6 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zipkin</artifactId>
         </dependency>
@@ -65,7 +57,7 @@
         <dependency>
             <groupId>people-api</groupId>
             <artifactId>people-api</artifactId>
-            <scope>system</scope>
+            <scope>runtime</scope>
             <version>1.0</version>
             <systemPath>${basedir}/src/lib/people-api.jar</systemPath>
         </dependency>
@@ -143,6 +135,14 @@
                     <groupId>org.postgresql</groupId>
                     <artifactId>postgresql</artifactId>
                     <scope>runtime</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-actuator</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>org.springframework.cloud</groupId>
+                    <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
                 </dependency>
             </dependencies>
         </profile>
