--- a/project/src/main/resources/application-local.properties
+++ b/project/src/main/resources/application-local.properties
@@ -1,4 +1,4 @@
-server.port=8082
+server.port=${PORT:0}
 
 ##H2 Database Configurations
 spring.datasource.url=jdbc:h2:mem:resoma-project
@@ -12,5 +12,7 @@ spring.h2.console.enabled=true
 spring.liquibase.enabled=false
 
 ##Eureka Configurations
-eureka.client.service-url.defaultZone=http://service-registry-server:8761/eureka
+#eureka.client.service-url.defaultZone=http://service-registry-server:8761/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.instance.preferIpAddress=true
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
