Added chnages to consume the incomming employee termination message.

--- a/project/pom.xml
+++ b/project/pom.xml
@@ -68,6 +68,14 @@
             <version>1.0</version>
             <systemPath>${basedir}/src/lib/people-api.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
