--- a/project/src/main/resources/application-dev.properties
+++ b/project/src/main/resources/application-dev.properties
@@ -19,3 +19,12 @@ spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
 ##Eureka Configurations
 eureka.client.service-url.defaultZone=http://service-registry-server:8761/eureka
 eureka.client.instance.preferIpAddress=true
+#
+# RabbitMQ
+spring.rabbitmq.host=resoma-rabbitmq
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+## People change message
+queue.people.route=people.change
+queue.people.change.name=people.terminate
