Added QueueConfig class, added ErrorMessage class.
Added errorQueue config for error messages that will error when project module trying to consume.

--- a/project/src/main/resources/application-dev.properties
+++ b/project/src/main/resources/application-dev.properties
@@ -28,3 +28,9 @@ spring.rabbitmq.password=guest
 ## People change message
 queue.people.route=people.change
 queue.people.change.name=people.terminate
+
+## Project error message
+queue.project.exchange=resoma.project
+queue.durable=true
+queue.project.route=project.change
+queue.project.error=project.error
