Added zipkin and sleuth in project module

--- a/project/src/main/resources/application-dev.properties
+++ b/project/src/main/resources/application-dev.properties
@@ -28,3 +28,7 @@ spring.rabbitmq.password=guest
 ## People change message
 queue.people.route=people.change
 queue.people.change.name=people.terminate
+#
+#Zipkin
+spring.zipkin.service.name=project
+spring.zipkin.baseurl=http://resoma-zipkin:9411
