--- a/project/src/main/resources/application-dev.properties
+++ b/project/src/main/resources/application-dev.properties
@@ -21,9 +21,10 @@ eureka.client.service-url.defaultZone=http://service-registry-server:8761/eureka
 eureka.client.instance.preferIpAddress=true
 #
 # RabbitMQ
-spring.rabbitmq.host=resoma-rabbitmq
+spring.rabbitmq.host=localhost
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+spring.rabbitmq.port=5672
 
 ## People change message
 queue.people.route=people.change
@@ -31,4 +32,4 @@ queue.people.change.name=people.terminate
 #
 #Zipkin
 spring.zipkin.service.name=project
-spring.zipkin.baseurl=http://resoma-zipkin:9411
+spring.zipkin.baseurl=http://zipkin:9411
